# market-wizard-api

./: .gitignore  Makefile  README.md  agent.py  docker-compose.yml  pyproject.toml
curls/: investments_summary.sh  portfolio_summary.sh  stock_data.sh
market_wizard_api/: server.py
market_wizard_api/clients/: yf_client.py
market_wizard_api/config/: __init__.py  config.py  config_utils.py
market_wizard_api/db_client/: redis_client.py
market_wizard_api/mcp/: mcp_server.py
market_wizard_api/models/portfolio/: investments_summary.py  portfolio_summary.py
market_wizard_api/models/yfinance_models/: models.py
market_wizard_api/routers/: __init__.py  t212.py  yfinance.py
market_wizard_api/upstream/: upstream_t212.py
test/: conftest.py  test_async_t212.py  test_yfinance.py
