[tool.poetry]
name = "market-wizard-api"
version = "0.1.0"
description = ""
authors = ["Lancasterg <lancaster0180@gmail.com>"]
readme = "README.md"
packages = [{include = "market_wizard_api"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

fastapi = "^0.116.1"
uvicorn = "^0.35.0"
setuptools = "^80.9.0"
yfinance = "0.2.64"
trading-212-client = "0.1.2"
aiocache = "^0.12.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
