[tool.poetry]
name = "market-wizard-api"
version = "0.1.0"
description = ""
authors = ["Lancasterg <lancaster0180@gmail.com>"]
readme = "README.md"
packages = [{include = "market_wizard_api"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

fastapi = "^0.116.1"
uvicorn = "^0.35.0"
setuptools = "^80.9.0"
yfinance = "0.2.64"
trading-212-client = "0.1.4"
aiocache = "^0.12.3"
pyarrow = "^21.0.0"
fastmcp = {extras = ["uvicorn"], version = "<2.10.0, <2.13.0"}
pydantic-ai = "^1.0.10"

[tool.poetry.group.analysis.dependencies]
ta-lib = "^0.6.7"
scikit-learn = "^1.7.2"
matplotlib = "^3.10.6"
backtesting = "^0.6.5"
praw = "^7.8.1"
polars = "^1.33.1"
seaborn = "^0.13.2"
pyqt6 = "^6.9.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"


[tool.poetry.group.analysys.dependencies]
polars-talib = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
